# daikhan

./: .editorconfig  .gitignore  LICENSE  NEWS  README.md  io.gitlab.Envision.MediaPlayer.yaml  meson.build  meson_options.txt  vala-lint.config
build-aux/flatpak/: io.gitlab.daikhan.devel.yml
build-aux/msys/: .gitignore
build-aux/win32/: .gitignore  FileAssociation.nsh  PKGBUILD  README.md  daikhan.nsi  msys-deploy.py  msys-deploy.toml  post_deploy.sh  svg2ico.sh
data/: daikhan.desktop.in  daikhan.gschema.xml.in  daikhan.metainfo.xml.in  daikhan.service.in  io.gitlab.Envision.MediaPlayer.desktop  io.gitlab.Envision.MediaPlayer.metainfo.xml  io.gitlab.Envision.MediaPlayer.service.in  meson.build
data/gschemas/: daikhan.gschema.xml.in  io.gitlab.Envision.MediaPlayer.state.gschema.xml  meson.build
data/icons/: ico.rc  meson.build
extra-scripts/: compare-content.py
po/: LINGUAS  POTFILES.in  cs.po  daikhan.pot  de.po  es.po  et.po  fi.po  fr.po  hi.po  meson.build  nl.po  oc.po  pt_BR.po  ru.po  ta.po  tr.po  uk.po  update-pot-file.sh  ur.po  vi.po  zh_Hans.po
src/: ActionDialog.vala  AppMenuButton.blp  AppMenuButton.vala  AppWindow.blp  AppWindow.vala  Application.vala  ComboRow.vala  Conf.vala.in  ContentId.vala  Database.vala  DropTarget.vala  DurationLabel.vala  ErrorDialog.blp  ErrorDialog.vala  GestureDragWindow.vala  History.vala  IdComboRow.vala  LibDB.vala  MPRIS.vala  MediaControls.blp  MediaControls.vala  MediaPlayer.vala  PillButton.blp  PillButton.vala  PlayButton.vala  PlayFlags.vala  Playback.vala  PlaybackHistory.vala  PlaybinProxy.vala  Player.vala  PlayerView.blp  PlayerView.css  PlayerView.vala  PlayerWindow.vala  PreferencesWindow.blp  PreferencesWindow.vala  ProgressBar.vala  ProgressLabel.vala  Queue.vala  RepeatMode.vala  (+50 more)
src/daikhan-content-id/: Application.vala  main.vala  meson.build
src/media-controls/: PlayButton.vala  ProgressBar.vala  VolumeButton.vala  play-button.vala  progress-bar.vala  progress-scale.vala  volume-button.blp  volume-button.vala
vapi/: libxxhash.vapi
